# Interp

./: .gitignore  AkimaSpline.h  CMakeLists.txt  CubicSpline.out  README.md
Interp/: AkimaSpline  All  Core  CubicSpline  Lagrange  Linear  Polynomial
Interp/src/: AkimaSpline.h  Concepts.h  CubicSpline.h  Lagrange.h  Linear.h  Polynomial.h  mytestformat.clang-format
Interpolation/: AkimaSpline  All  CubicSpline  Lagrange  Linear  Polynomial
Interpolation/src/: AkimaSpline.h  Concepts.h  CubicSpline.h  Function1D.h  Lagrange.h  Linear.h  Polynomial.h  Traits.h
Interpolation/src/OldFiles/: AkimaSpline.h
Interpolation/src/OneDimensional/: CubicSpline.h  Derivative.h  Function.h  Linear.h  Polynomial.h  Product.h  Sum.h  Traits.h  Utility.h
examples/: CMakeLists.txt  CubicSplineExample.cpp  LagrangeExample.cpp  LinearExample.cpp  mytestformat.clang-format  testmult.cpp
examples/OldExamples/: CubicSplineExample.cpp  LinearExample.cpp
include/Interpolation/: AkimaSpline.hpp  CubicSpline.hpp  Interpolation.hpp  Lagrange.hpp  Linear.hpp  Polynomial.hpp
output_files/: C+Akima.out  CubicSpline.out  Deriv_Test.out  compare_file.py  cubic_spline.in  cubic_spline.out  plot_2D.py  plot_compare_two.py
tests/: CMakeLists.txt  MakeData1D.h  TestCubicSpline.h  TestCubicSpline.hpp  TestLinear.h  TestLinear.hpp  Tests.cpp
